# denormalized

./: .clabot  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml
.github/actions/setup-builder/: action.yaml
.github/workflows/: python-docs.yml  python-lint.yml  python.yml  rust.yml
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs
crates/channels/src/channel_manager/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/common/src/error/: mod.rs  py_err.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  dataframe.rs  datastream.rs  lib.rs  query_planner.rs  sinkable.rs
crates/core/src/accumulators/: mod.rs  serializable_accumulator.rs  serialize.rs
crates/core/src/config_extensions/: denormalized_config.rs  mod.rs
crates/core/src/datasource/: kafka.rs  mod.rs
crates/core/src/datasource/kafka/: kafka_config.rs  kafka_stream_read.rs  kafka_topic.rs  mod.rs  topic_reader.rs  topic_writer.rs
crates/core/src/formats/: mod.rs
crates/core/src/formats/decoders/: avro.rs  json.rs  mod.rs  utils.rs
crates/core/src/logical_plan/: mod.rs  streaming_window.rs
crates/core/src/orchestrator/: mod.rs  orchestrator.rs
crates/core/src/physical_optimizer/: coalesce_before_streaming_window_aggregate.rs  mod.rs
crates/core/src/physical_plan/: checkpointing_plan.rs  kafka.rs  mod.rs  stream_table.rs  streaming_window.rs
crates/core/src/physical_plan/continuous/: grouped_window_agg_stream.rs  mod.rs  streaming_window.rs
crates/core/src/physical_plan/continuous/group_values/: bytes.rs  bytes_view.rs  mod.rs  primitive.rs  row.rs
crates/core/src/physical_plan/continuous/order/: full.rs  mod.rs  partial.rs
crates/core/src/physical_plan/utils/: accumulators.rs  mod.rs  time.rs
crates/core/src/planner/: mod.rs  streaming_window.rs
crates/core/src/state_backend/: mod.rs  rocksdb_backend.rs  slatedb.rs
crates/core/src/utils/: arrow_helpers.rs  default_optimizer_rules.rs  mod.rs  node_id.rs  row_encoder.rs  serialization.rs  serialize.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  orchestrator.rs
crates/orchestrator/src/channel_manager/: mod.rs
crates/sinks/: Cargo.toml
crates/sinks/src/: file_sink.rs  kafka_sink.rs  sink.rs  stdout_sink.rs
docs/: kafka_rideshare_example.md
examples/: Cargo.toml
examples/examples/: csv_streaming.rs  emit_measurements.rs  kafka_rideshare.rs  seed_postgres_db.rs  simple_aggregation.rs  sink_to_postgres.rs  stream_join.rs  test.rs  udf_example.rs
examples/src/: lib.rs
py-denormalized/: .gitignore  Cargo.toml  README.md  build_wheels.sh  pyproject.toml
py-denormalized/pdocs/: module.html.jinja2
py-denormalized/python/denormalized/: __init__.py  context.py  data_stream.py  datastream.py  feast_data_stream.py  feast_data_stream.pyi  feature_flags.py  foo.py  utils.py
py-denormalized/python/denormalized/datafusion/: __init__.py  catalog.py  common.py  context.py  dataframe.py  expr.py  functions.py  object_store.py  record_batch.py  substrait.py  udf.py
py-denormalized/python/examples/: stream_aggregate.py  stream_join.py  udaf_example.py  udf.py  udf_example.py
py-denormalized/python/tests/: test_all.py
py-denormalized/src/: context.rs  datastream.rs  errors.rs  lib.rs  utils.rs
