[workspace]
resolver = "2"
members = ["crates/core", "examples"]

[workspace.package]
authors = [
  "Matt Green <matt@denormalized.io>",
  "Amey Chaugule <amey@denormalized.io>",
]
edition = "2021"
homepage = "https://github.com/probably-nothing-labs/denormalized"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/probably-nothing-labs/denormalized"
version = "0.1.0"
description = "Embeddable stream processing engine"

[workspace.dependencies]
df-streams-core = { path = "crates/core" }

datafusion = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-common = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-expr = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-functions = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-functions-aggregate = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-optimizer = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-physical-expr = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-physical-plan = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-physical-optimizer = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-sql = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }
datafusion-execution = { git = "https://github.com/probably-nothing-labs/arrow-datafusion" }

arrow = { version = "52.0.0", features = ["prettyprint"] }
arrow-array = { version = "52.0.0", default-features = false, features = [
  "chrono-tz",
] }
arrow-schema = { version = "52.0.0", default-features = false }
arrow-ipc = { version = "52.0.0", default-features = false, features = ["lz4"] }
arrow-json = { version = "52.0.0" }
arrow-string = { version = "52.0.0", default-features = false }
arrow-ord = { version = "52.0.0", default-features = false }

apache-avro = { version = "0.16", default-features = false, features = [
  "bzip",
  "snappy",
  "xz",
  "zstandard",
] }
futures = "0.3"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36", features = ["macros", "rt", "sync"] }
async-trait = "0.1.81"
rdkafka = "0.36.2"
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false }
itertools = "0.13"
