[workspace]
resolver = "2"
members = [
  "crates/*", 
  "examples",
  "py-denormalized",
]

[workspace.package]
authors = [
  "Matt Green <matt@denormalized.io>",
  "Amey Chaugule <amey@denormalized.io>",
]
edition = "2021"
homepage = "https://github.com/probably-nothing-labs/denormalized"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/probably-nothing-labs/denormalized.git"
version = "0.0.1"
rust-version = "1.81.0"
description = "Embeddable stream processing engine"

[workspace.dependencies]
denormalized = { path = "crates/core" }
denormalized-common = { path = "crates/common" }
denormalized-orchestrator = { path = "crates/orchestrator" }

# datafusion = { path = "../arrow-datafusion/datafusion/core" }
datafusion = { git = "https://github.com/probably-nothing-labs/arrow-datafusion", rev = "d812edc349f1500dc74df1967feb53156e78b462" }

arrow = { version = "53.0.0", features = ["prettyprint"] }
arrow-array = { version = "53.0.0", default-features = false, features = [
  "chrono-tz",
] }
arrow-schema = { version = "53.0.0", default-features = false }
arrow-ipc = { version = "53.0.0", default-features = false, features = ["lz4"] }
arrow-json = { version = "53.0.0" }
arrow-string = { version = "53.0.0", default-features = false }
arrow-ord = { version = "53.0.0", default-features = false }

apache-avro = { version = "0.16", default-features = false, features = [
  "bzip",
  "snappy",
  "xz",
  "zstandard",
] }
futures = "0.3"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36", features = [
  "macros",
  "rt",
  "sync",
  "rt-multi-thread",
] }
async-trait = "0.1.81"
rdkafka = "0.36.2"
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
chrono = { version = "0.4.38" }
itertools = "0.13"
pyo3 = { version = "0.22.2" }
slatedb = "0.2.0"
