[package]
name = "df-streams-examples"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
datafusion = { workspace = true }

df-streams-core = { workspace = true }

arrow = { workspace = true }
arrow-schema = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tempfile = { version = "3" }
rdkafka = { workspace = true }
rand = "0.8.5"
tokio-postgres = { version = "0.7.11", features = ["with-serde_json-1"] }
log = { workspace = true }
env_logger = "0.11.5"
