[package]
name = "denormalized-examples"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
denormalized = { workspace = true }

datafusion = { workspace = true }

arrow = { workspace = true, features = ["prettyprint"] }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
anyhow = "1.0.86"
tracing = { workspace = true }
futures = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "parking_lot",
    "full",
    "tracing",
] }
tempfile = { version = "3" }
rdkafka = { workspace = true }
rand = "0.8.5"
log = { workspace = true }
env_logger = "0.11.5"
console-subscriber = "0.4.0"
