[package]
name = "denormalized-python"
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/probably-nothing-labs/denormalized.git"
repository = "https://github.com/probably-nothing-labs/denormalized.git"

[lib]
name = "denormalized_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
denormalized = { workspace = true }
datafusion = { workspace = true, features = [
  "pyarrow",
  "avro",
  "unicode_expressions",
] }
datafusion-python = { path = "../../datafusion-python/" }
