[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "denormalized"
requires-python = ">=3.12"
classifiers = []
dynamic = ["version"]                                    # Version specified in py-denormalized/Cargo.toml
description = "Embeddable stream processing engine"
dependencies = ["pyarrow>=17.0.0", "datafusion>=40.1.0"]

[project.optional-dependencies]
tests = ["pytest"]
feast = ["feast"]
dev = []

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "denormalized._d_internal"

[tool.rye]
dev-dependencies = [
    "pip>=24.2",
    "ipython>=8.26.0",
    "pytest>=8.3.2",
    "maturin>=1.7.4",
    "pyarrow-stubs>=17.11",
    "pandas>=2.2.3",
    "jupyterlab>=4.3.0",
]

# Enable docstring linting using the google style guide
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "W"]
ignore = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.basedpyright]
include = ["python"]
exclude = ["src"]
typeCheckingMode = "standard"
