[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "denormalized"
requires-python = ">=3.12"
classifiers = []
dynamic = ["version"]                                    # Version specified in py-denormalized/Cargo.toml
description = "Embeddable stream processing engine"
dependencies = [
    "pyarrow>=17.0.0",
    "datafusion>=40.1.0",
    "pip>=24.3.1",
]

[project.optional-dependencies]
feast = ["feast"]

[dependency-groups]
dev = [
    "pdoc>=15.0.0",
    "ipython>=8.26.0",
    "pytest>=8.3.2",
    "maturin>=1.7.4",
    "pyarrow-stubs>=17.11",
    "pandas>=2.2.3",
    "jupyterlab>=4.3.0",
    "pdoc>=15.0.0",
    "pip>=24.3.1",
]
docs = [
    "pdoc>=15.0.0",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "denormalized._d_internal"

# Enable docstring linting using the google style guide
[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "D", "W"]
ignore = ["F", "D100", "D101", "D102", "D103", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.basedpyright]
include = ["python"]
exclude = ["src"]
typeCheckingMode = "standard"
reportMissingImports = false
