[package]
name = "df-streams-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }

arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-json = { workspace = true }
arrow-ord = { workspace = true }

apache-avro = { workspace = true }
base64 = { workspace = true }
rdkafka = { workspace = true }
futures = { workspace = true }
df-streams-sinks = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
