[package]
name = "denormalized"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
datafusion = { workspace = true }

arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-json = { workspace = true }
arrow-ord = { workspace = true }

apache-avro = { workspace = true }
base64 = { workspace = true }
rdkafka = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
serde.workspace = true
rocksdb = "0.22.0"
bincode = "1.3.3"
half = "2.4.1"
delegate = "0.12.0"
