[package]
name = "denormalized"
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
python = []

[dependencies]
denormalized-common = { workspace = true }
denormalized-orchestrator = { workspace = true }

datafusion = { workspace = true, features = ["avro"] }

arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-json = { workspace = true }
arrow-ord = { workspace = true }

apache-avro = { workspace = true }
base64 = { workspace = true }
rdkafka = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
log = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
serde.workspace = true
rocksdb = "0.22.0"
bincode = "1.3.3"
half = "2.4.1"
delegate = "0.12.0"
ahash = "0.8.11"
hashbrown = "0.14.5"
flatbuffers = "24.3.25"
crossbeam = "0.8.4"
slatedb = "0.2.0"                                   #{ path = "/Users/amey/pnl/3rdparty/slatedb" } "0.2.0"
object_store = "0.11.0"
bytes = "1.7.2"
