[package]
name = "df-streams-sinks"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
datafusion = { workspace = true }
datafusion-common = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
rdkafka = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
